# brain-graph

./: .gitignore  README.md  pyproject.toml
discovery/: inbox.md  sources.md  workflows.md
exports/: brain_graph.json  brain_graph.mmd
raw/papers/: 2026-04-20-aeia-mn.md  2026-04-20-agent-poison.md  2026-04-20-agentdojo.md  2026-04-20-agentsys.md  2026-04-20-auto-dan.md  2026-04-20-autodefense.md  2026-04-20-breaking-agents.md  2026-04-20-caution-for-the-environment.md  2026-04-20-crossinject.md  2026-04-20-eva.md  2026-04-20-fine-print-injection.md  2026-04-20-hijacking-jarvis.md  2026-04-20-not-what-youve-signed-up-for.md  2026-04-20-osworld.md  2026-04-20-pdos.md  2026-04-20-red-teaming-multi-agent-systems.md  2026-04-20-redteamcua.md  2026-04-20-thinktrap.md  2026-04-20-udora.md  2026-04-20-visualwebarena.md  2026-04-20-webarena.md  2026-04-20-webinject.md
shared/: research.md
src/brain_graph/: __init__.py  batch_compile.py  cli.py  compile_paper.py  compiler_schema.py  discover_papers.py  export_graph.py  extract_pdf.py  frontmatter.py  import_paper.py  ingest_raw.py  lint.py  models.py  new_note.py  normalize_graph.py  openrouter_client.py  paths.py  research_loop.py  slugify.py  templates.py  topic_maps.py
templates/: author.md  concept.md  gap.md  map.md  method.md  paper.md
tests/: test_batch_compile.py  test_cli.py  test_compile_paper.py  test_discover_papers.py  test_export_graph.py  test_extract_pdf.py  test_import_paper.py  test_ingest_raw.py  test_lint.py  test_new_note.py  test_openrouter_client.py  test_templates.py
views/graph/: README.md
(+52 files in other folders)
